# EnginePlayground

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Data/Shaders/: forward_render.fs  textured.fs  textured.vs
Demo/: program.cpp
Demo/scenes/: pbr_test.cpp  pbr_test.h
Engine/: CMakeLists.txt  Game.cpp  Game.h  State.h  cell.cpp  cell.h
Engine/Camera/: Camera.cpp  Camera.h  CameraFrustum.cpp  CameraFrustum.h  FlyCamera.cpp  FlyCamera.h
Engine/Lighting/: DirectionalLight.h  PointLight.h
Engine/Mesh/: Circle.cpp  Cube.cpp  LineStrip.cpp  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Sphere.cpp  Torus.cpp
Engine/Renderer/: DebugDraw.cpp  DebugDraw.h  GLState.cpp  GLState.h  MaterialLibrary.cpp  MaterialLibrary.h  PBRCapture.h  PostProcessor.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  SimpleRenderer.cpp  SimpleRenderer.h  ViewportGrid.cpp
Engine/Resources/: MeshLoader.cpp  MeshLoader.h  Resources.cpp  Resources.h  ShaderLoader.cpp  TextureLoader.cpp
Engine/Scene/: Scene.cpp  SceneNode.cpp  SceneNode.h
Engine/Shading/: Shader.cpp
Engine/Systems/: AABB.cpp  AABB.h  BST.h  BTree.cpp  BTree.h  BVH.h
Engine/Utils/: FileIO.h  Logger.h  MathUtils.h  Utils.h
Engine/Window/: IMGUIHandler.cpp  IMGUIHandler.h  SDLHandler.cpp  SDLHandler.h
EnginePlayground/: CMakeLists.txt  EnginePlayground.cpp  EnginePlayground.h  cell.cpp  cell.h
EnginePlayground/Camera/: Camera.cpp  Camera.h  CameraFrustum.cpp  CameraFrustum.h
EnginePlayground/Lighting/: DirectionalLight.h  PointLight.h
EnginePlayground/Mesh/: Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Quad.cpp  Torus.cpp
EnginePlayground/Renderer/: CommandBuffer.cpp  GLCache.cpp  GLCache.h  MaterialLibrary.cpp  MaterialLibrary.h  PBR.cpp  RenderCommand.h  RenderTarget.cpp  Renderer.cpp  Renderer.h
EnginePlayground/Resources/: MeshLoader.cpp  Resources.cpp  Resources.h  ShaderLoader.h  TextureLoader.h
EnginePlayground/Scene/: Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Skybox.cpp
EnginePlayground/Shading/: Material.cpp
EnginePlayground/Utils/: Logger.h
Launcher/: CMakeLists.txt  Launcher.cpp  Launcher.h
